--- a/wiki/LibreriasGraficasBasadasSDL.wiki
+++ b/wiki/LibreriasGraficasBasadasSDL.wiki
@@ -1,5 +1,5 @@
 #summary One-sentence summary of this page.
-#labels ManualPage
+#labels Phase-Implementation
 = Librerias Graficas =
 
 == Descripcion ==
