Edited wiki page LibreriasGraficasBasadasSDL through web user interface.

--- a/wiki/LibreriasGraficasBasadasSDL.wiki
+++ b/wiki/LibreriasGraficasBasadasSDL.wiki
@@ -1,5 +1,5 @@
+#summary Pagina manual de las librerias graficas.
 #labels Phase-Implementation
-#Pagina manual de las librerias graficas.
 = Librerias Graficas =
 
 == Descripcion ==
