Sigo intentando migrar a SDL2. Las librerias son ahora mas intestables +Actualizadas las wikis

--- a/wiki/Librerias_de_sonido_basadas_en_SDL.wiki
+++ b/wiki/Librerias_de_sonido_basadas_en_SDL.wiki
@@ -8,5 +8,5 @@ Librerias para crear un framework de sonidos basado en SDL orientado a objetos y
 
 == Requerimientos ==
 
- * *Libsdl*
- * *SDL Mixer 1.2*
+ * *Libsdl2* (_SDL 2_)
+ * *SDL Mixer 2* (_SDL 2_) 
