--- a/wiki/Librerias_graficas_basadas_en_SDL.wiki
+++ b/wiki/Librerias_graficas_basadas_en_SDL.wiki
@@ -14,6 +14,6 @@ Librerias para crear un framework grafico basado en SDL orientado a objetos y am
 == Archivos ==
 
  * _surface.h_ :
- * _window_surface.h_ :
  * _sprite.h_ :
  * _animated_sprite.h_ :
+ * _window.h_ :
