Agregada la clase Text Box

--- a/wiki/Librerias_graficas_basadas_en_SDL.wiki
+++ b/wiki/Librerias_graficas_basadas_en_SDL.wiki
@@ -19,3 +19,4 @@ Librerias para crear un framework grafico basado en SDL orientado a objetos y am
  * _animated_sprite.h_ :
  * _window.h_ :
  * _text_drawer.h_:
+ * _text_box.h_:
