--- a/wiki/Librerias_graficas_basadas_en_SDL.wiki
+++ b/wiki/Librerias_graficas_basadas_en_SDL.wiki
@@ -20,3 +20,4 @@ Librerias para crear un framework grafico basado en SDL orientado a objetos y am
  * _window.h_ :
  * _text_drawer.h_:
  * _text_box.h_:
+ * _secret_text_box.h_:
