Agregada la clase Music para manejar la musica en el juego. Aparentemente tambien los otro sonidos pero de momento no estoy seguro -Tengo que reordenar un poco el makefile porque como esta, linkearia librerias al pedo

--- a/wiki/Librerias_de_sonido_basadas_en_SDL.wiki
+++ b/wiki/Librerias_de_sonido_basadas_en_SDL.wiki
@@ -9,4 +9,8 @@ Librerias para crear un framework de sonidos basado en SDL orientado a objetos y
 == Requerimientos ==
 
  * *Libsdl2* (_SDL 2_)
- * *SDL Mixer 2* (_SDL 2_) 
+ * *SDL Mixer 2* (_SDL 2_)
+
+ == Archivos ==
+
+ * _music.h_:
