Agregada la clase button para usar como botones (puede nececitar pulirse mucho mas) Agregados los archivos base de otra clase para usarse con los botones

--- a/wiki/Librerias_graficas_basadas_en_SDL.wiki
+++ b/wiki/Librerias_graficas_basadas_en_SDL.wiki
@@ -21,3 +21,6 @@ Librerias para crear un framework grafico basado en SDL orientado a objetos y am
  * _text_drawer.h_:
  * _text_box.h_:
  * _secret_text_box.h_:
+ * _button.h_:
+ 	Funciona simplemente como un boton que al ser clickeado se activa y al clickearse en otro lado se desactiva. Esto funciona segun el evento pasado, por lo que se puede restringir la zona donde se le pasa el evento o no.
+ * _screen_zone.h_:
