--- a/wiki/Librerias_de_sonido_basadas_en_SDL.wiki
+++ b/wiki/Librerias_de_sonido_basadas_en_SDL.wiki
@@ -9,7 +9,10 @@ Librerias para crear un framework de sonidos basado en SDL orientado a objetos y
 == Requerimientos ==
 
  * *Libsdl2* (_SDL 2_)
- * *SDL Mixer 2* (_SDL 2_)
+ * *SDL Mixer 2* (_SDL 2_):
+ 	Requiere el paquete libsdl2-mixer-2.0-0 para correrlo
+ 	Requiere el paquete libsdl2-image-dev para compilarlo
+ 	
 
  == Archivos ==
 
